--- a/tests/TestRobot.template
+++ b/tests/TestRobot.template
@@ -18,6 +18,12 @@ public class TestRobot{{ test_number }} extends Robot {
         }
     }
 
+    public void turnLeft(int times) {
+        for (int i = 0; i < times; i++) {
+            super.turnLeft();
+        }
+    }
+
     public static void main(String args[]) {
         TestRobot{{ test_number }} karel = new TestRobot{{ test_number }}(2, 2, East, 0);
         Field locField = null;
